[tool.poetry]
name = "MUsic_taste_prediction"
version = "0.1.0"
description = ""
authors = ["Tiago Reis <Tiago.B.C.Reis@hotmail.com>"]
readme = "README.md"
#packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.5.0"
scikit-learn = "1.1.2"
NumPy = "^1.17.3"
SciPy = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"